Need to fix navbar vertical align to the center

--- a/sources/nav-bar.css
+++ b/sources/nav-bar.css
@@ -2,10 +2,10 @@
     position: absolute;
     top: 0;
     width: 100%;
+    height: 5%;
     background-color: antiquewhite;
     border-bottom: 3px solid #800000;
     z-index: 1000;
-    transition: top 0.3s;
 }
 
 .nav-bar ul {
@@ -14,11 +14,6 @@
     padding: 0;
     display: flex;
     justify-content: space-around;
-    align-items: center;
-}
-
-.nav-bar ul li {
-    padding: 15px 20px;
 }
 
 .nav-bar ul li a {
