--- a/sources/styles-canva.css
+++ b/sources/styles-canva.css
@@ -12,6 +12,8 @@ body, html {
     background-color: #f0f0f0; /* Couleur de fond par défaut */
 }
 
-#CanvaDiv{
-    position: ;
+.CanvaDiv{
+    position: relative;
+    top: 5%;
+    background-color: red;
 }
